# ase-projeto

./: .gitignore  README.md
Task3/: CMakeLists.txt
Task3/main/: CMakeLists.txt  Task3.c  bme280_sensor_i2c.c
fantest/: CMakeLists.txt
fantest/main/: CMakeLists.txt  fantest.c
http-server/: CMakeLists.txt
http-server/main/: CMakeLists.txt  http-server.c
pptc/: CMakeLists.txt  partitions.csv
pptc/main/: CMakeLists.txt  fan_pwm.h  http_server.c  idf_component.yml  littlefs.h  pptc.c  soft_ap.c
src/: partitions.csv
src/main/: CMakeLists.txt  bme280_sensor_i2c.h  esp32.c  fan_pwm.c  littlefs.c  soft_ap.h
testelittlefs/: CMakeLists.txt
testelittlefs/main/: CMakeLists.txt
